@@ -2,25 +2,18 @@
     lang="en"
     i18n:domain="plone">
 
-    <head 
-        tal:define="portal python:here.portal_url.getPortalObject();">
+    <head tal:define="portal python:here.portal_url.getPortalObject();">
        <script type="text/javascript" src=""
               tal:attributes="src string:${portal/absolute_url}/swfobject.js"></script>
     </head>    
-    <body bgcolor="" style="padding: 0 0 0 50%; "
-          tal:attributes="bgcolor here/getBgcolor;">
-            <metal:main define-macro="main"
-                   tal:define="flash nocall:here">
-		             <div id="" class="flashmovie" 
+    <body bgcolor="" style="padding: 0 0 0 50%;" tal:attributes="bgcolor here/getBgcolor;">
+        <metal:main define-macro="main" tal:define="flash nocall:here">
+             <div id="" class="flashmovie" 
                 tal:attributes="id string:container-${here/getId};
-                                style  here/flashfileStyle;"> This page requires Flashplayer, please download it for free from <a href="http://www.macromedia.com/go/getflashplayer" title="get flashplayer">http://www.macromedia.com/go/getflashplayer</a> </div>
-
-
+                                style  here/flashfileStyle;"> This page requires Flashplayer, 
+                                please download it for free from <a href="http://www.macromedia.com/go/getflashplayer" 
+                                title="get flashplayer">http://www.macromedia.com/go/getflashplayer</a> </div>
             <tal:flashjs replace="structure here/flash_js_inline" />
-
-                
-            </metal:main>
-        
+        </metal:main>
     </body>
 </html>
-
